# cli-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
cli_gpt/: __init__.py  __main__.py  api.py  commands.py  models.py  ui.py
tests/: test_api.py  test_main.py
