[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-gpt"
version = "1.0.0"
description = "Terminal chat app to Chat with Modern LLMs"
authors = [{ name = "ayon1xw", email = "ayon1xw@proton.me" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
]
keywords = ["openrouter", "cli", "chatbot", "terminal", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[project.scripts]
cli-gpt = "cli_gpt.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_gpt*"]

[project.urls]
Repository = "https://github.com/aoyn1xw/cli-gpt"
